# docgen

./: .gitignore  docgen.cabal  docgen.cabal~  stack.yaml
app/: CommandLine.hs  Web.hs
src/: Docgen.hs
src/Docgen/: Document.hs  Scraper.hs  Types.hs
test/: test.html
web/: Main.hs
