name:                docgen
version:             0.1.0.0
synopsis:
description:
homepage:            https://github.com/themattchan/docgen
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@themattchan.com
copyright:           2016 Matthew Chan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , scalpel ==0.3.1
  default-language:    Haskell2010

executable docgen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , docgen
  default-language:    Haskell2010

test-suite docgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docgen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/docgen
