name:                docgen
version:             0.1.0.0
synopsis:
description:
homepage:            https://github.com/themattchan/docgen
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@themattchan.com
copyright:           2016 Matthew Chan
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/themattchan/docgen

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.0
                     , scalpel ==0.3.1
                     , pandoc >= 1.17.1
  default-language:    Haskell2010

executable docgen-cli
  hs-source-dirs:      app
  main-is:             CommandLine.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , docgen
  default-language:    Haskell2010

executable docgen-web
  hs-source-dirs:      app
  main-is:             Web.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , docgen
  default-language:    Haskell2010

test-suite docgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docgen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
