name:                docgen
version:             0.1.0.0
synopsis:            Scrapes web pages
description:
homepage:            https://github.com/themattchan/docgen
license:             MIT
author:              Matthew Chan <matt@themattchan.com>
maintainer:          Matthew Chan <matt@themattchan.com>
copyright:           2016 Matthew Chan
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/themattchan/docgen

library
  hs-source-dirs:      src
  exposed-modules:     Docgen
                     , Docgen.Scraper
                     , Docgen.Document
                     , Docgen.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens >= 4.13
                     , text >= 1.2.2.0

                     -- scrape
                     , conduit >= 1.2.7
                     , http-conduit >= 2.0
                     , http-conduit-browser >= 2.0
                     , resourcet >= 1.1.7
                     , xml-conduit >= 1.3.5
                     , html-conduit
                     , xml-lens

                     , JuicyPixels >= 3.1
                     , dates >= 0.2.2.1
                     -- make document
                     , pandoc >= 1.17.1

  default-language:    Haskell2010

executable docgen-cli
  hs-source-dirs:      cli
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , docgen
  default-language:    Haskell2010

executable docgen-web
  hs-source-dirs:      web
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , docgen
  default-language:    Haskell2010

test-suite docgen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docgen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
